--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.34.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.71.1",
     "react-router-dom": "^7.13.0",
     "sonner": "^2.0.7",
